--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 							</li>
 
 							<li class="fragment" style="margin-bottom: 0.2cm;">
-								Thus, we have, $$x_i \prod_{i = 1}^n \big(1-x_j\big) \geqslant
+								Thus, we have $$x_i \prod_{i = 1}^n \big(1-x_j\big) \geqslant
 								\frac{1}{d+1}\left(1-\frac{1}{d+1}\right)^d \geqslant \frac{1}{e(d+1)} \geqslant
 								p \geqslant \mathbb{P}(A_i)$$
 							</li>
