--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Lovasz Local Lemma & its Applications</title>
+        <title>Lovász Local Lemma & its Applications</title>
 
         <meta name="description" content="SP2020">
         <meta name="author" content="JRC">
@@ -28,7 +28,7 @@
                 <section data-background="sp2020/network.gif" data-background-opacity=0.12 style="font-size: 33px;" data-auto-animate
 				data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
                     <h3 id="heading" style="color: white; text-align: center; margin-bottom: 0.8cm; font-size: 60px;">
-                        <b>Lovasz Local Lemma & its Applications</b>
+                        <b>Lovász Local Lemma & its Applications</b>
                     </h3>
                     <hr>
                     <div style="text-align: center; margin-top: 0.6cm;">
@@ -115,7 +115,7 @@
 
 						<div>
 							<ul>
-								<li class="fragment">
+								<li>
 									Note that if all the bad events are independent from each other, and their 
 									probabilities are bounded above by some $p < 1$, then we shall have:
 									$$\mathbb{P}\left(\bigcap_{i = 1}^n E_i^c\right) 
@@ -123,7 +123,7 @@
 									= 1 - \prod_{i = 1}^n \mathbb{P}(E_i)
 									> 1 - p^n > 0$$
 								</li>
-								<li class="fragment">
+								<li>
 									In that case, we can guarantee the occurence of a good event, with positive probability.
 								</li>
 							</ul>
@@ -137,14 +137,14 @@
 
 						<div>
 							<ul>
-								<li class="fragment">
+								<li>
 									If all the $E_i$'s are disjoint, and they collectively span the whole 
 									$\Omega$, i.e. if $E_1 \cup \cdots \cup E_n = \Omega$, then we shall have: 
 									$$\mathbb{P}\left(\bigcap_{i = 1}^n E_i^c\right) 
 									= 1 - \mathbb{P}\left(\bigcup_{i = 1}^n E_i\right)
 									= 1 - 1 = 0$$
 								</li>
-								<li class="fragment">
+								<li>
 									In that case, we can see that a good event is impossible to occur.
 								</li>
 							</ul>
@@ -177,14 +177,14 @@
 						</h2>
 
 						<div>
-							<blockquote class="fragment" style="width: auto; margin-bottom: 0.8cm;">
+							<blockquote style="width: auto; margin-bottom: 0.8cm;">
 								<ul>
 									<li>
-										In adverse situations like this, the Lovasz Local Lemma comes as a saviour.
+										In adverse situations like this, the <b>Lovász Local Lemma</b> comes as a saviour.
 									</li>
 
 									<li style="margin-top: 0.5cm; margin-bottom: 0.5cm;">
-										Under some restricted dependence among the bad events, Lovasz Local Lemma 
+										Under some restricted dependence among the bad events, Lovász Local Lemma 
 										ensures that a good event will occur with positive probability.
 									</li>
 								</ul>
@@ -192,10 +192,10 @@
 							<hr>
 
 							<div class="fragment" style="margin-top: 0.8cm;">
-								We shall be discussing two versions of the Lovasz Local Lemma, viz.
+								We shall be discussing two versions of the Lovász Local Lemma, viz.
 								<ul>
-									<li style="margin-top: 0.3cm;"><b>Symmetric Lovasz Local Lemma</b></li>
-									<li style="margin-top: 0.3cm;"><b>Asymmetric / General Lovasz Local Lemma</b></li>
+									<li style="margin-top: 0.3cm;"><b>Symmetric Lovász Local Lemma</b></li>
+									<li style="margin-top: 0.3cm;"><b>Asymmetric / General Lovász Local Lemma</b></li>
 								</ul>
 							</div>
 						</div>
@@ -203,8 +203,7 @@
                 </section>
 
 				
-				<section data-background="sp2020/bg-1.png" data-background-opacity=0.1 style="text-align: left; font-size: 30px;" data-auto-animate
-				data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
+				<section data-background="sp2020/bg-1.png" data-background-opacity=0.1 style="text-align: left; font-size: 30px;">
                     <h3 data-id="heading-sne" style="font-size: 50px;">
                         Mutual Independence
                     </h3>
@@ -228,7 +227,7 @@
 				<section data-background="sp2020/bg-1.png" data-background-opacity=0.1 style="text-align: left; font-size: 27px;" data-auto-animate
 				data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
                     <h3 data-id="heading-sne" style="font-size: 50px;">
-                        Symmetric Lovasz Local Lemma
+                        Symmetric Lovász Local Lemma
                     </h3>
 
 					<div style="margin-top: 0.6cm;">
@@ -257,10 +256,9 @@
                 </section>
 
 
-				<section data-background="sp2020/bg-1.png" data-background-opacity=0.1 style="text-align: left; font-size: 27px;" data-auto-animate
-				data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
+				<section data-background="sp2020/bg-1.png" data-background-opacity=0.1 style="text-align: left; font-size: 27px;">
                     <h3 data-id="heading-sne" style="font-size: 50px;">
-                        Asymmetric Lovasz Local Lemma
+                        Asymmetric Lovász Local Lemma
                     </h3>
 
 					<div style="margin-top: 0.6cm;">
@@ -287,29 +285,28 @@
                 </section>
 
 
-				<section data-background="sp2020/bg-1.png" data-background-opacity=0.1 style="text-align: left; font-size: 25px;" data-auto-animate
-				data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
-                    <h3 data-id="heading-sne" style="font-size: 50px;">
+				<section data-background="sp2020/bg-1.png" data-background-opacity=0.1 style="text-align: left; font-size: 25px;">
+                    <h3 style="font-size: 50px;">
                         Proof of Symmetric LLL
 					</h3>
 
 					<div style="margin-top: 0.6cm;">
 						<ul>
-							<li class="fragment" style="margin-bottom: 0.2cm;">
+							<li style="margin-bottom: 0.2cm;">
 								If $d = 0$, then all the $E_i$'s are independent, and symmetric LLL holds.
 							</li>
 
-							<li class="fragment" style="margin-bottom: 0.2cm;">
+							<li style="margin-bottom: 0.2cm;">
 								If $d > 0$, let us put $x_i = \frac{1}{d+1}$, for all $i = 1,2, \cdots, n$.
 							</li>
 
-							<li class="fragment" style="margin-bottom: 0.2cm;">
+							<li style="margin-bottom: 0.2cm;">
 								We shall be using the fact that for all $x\geqslant 0$, 
 								$\left(1-\frac{1}{x+1}\right)^x \geqslant \frac{1}{e} \cdot$
 							</li>
 
-							<li class="fragment" style="margin-bottom: 0.2cm;">
-								Thus, we have $$x_i \prod_{i = 1}^n \big(1-x_j\big) \geqslant
+							<li style="margin-bottom: 0.2cm;">
+								Thus, we have, $$x_i \prod_{i = 1}^n \big(1-x_j\big) \geqslant
 								\frac{1}{d+1}\left(1-\frac{1}{d+1}\right)^d \geqslant \frac{1}{e(d+1)} \geqslant
 								p \geqslant \mathbb{P}(A_i)$$
 							</li>
@@ -334,7 +331,7 @@
 							Positioning of Crystal Beads
 						</h2>
 
-						<blockquote class="fragment" style="width: auto;">
+						<blockquote style="width: auto;">
 							Suppose $11n$ points are placed around a circle and colored with $n$ different colors 
 							in such a way that each color is applied to exactly $11$ points. In any such coloring, 
 							there must be a set of $n$ points containing one point of each color but not containing 
@@ -387,12 +384,12 @@
 						</div>	
 					</section>
 
-					<section data-background="sp2020/bg-1.png" data-background-opacity=0.1 style="text-align: left; font-size: 28px;" data-auto-animate>
-						<h2 style="font-size: 35px; margin-bottom: 1cm;">
+					<section data-background="sp2020/bg-1.png" data-background-opacity=0.1 style="text-align: left; font-size: 28px;">
+						<h2 data-id="aaaa" style="font-size: 35px; margin-bottom: 1cm;">
 							2-colorability of Hypergraphs
 						</h2>
 
-						<blockquote class="fragment" style="width: auto;">
+						<blockquote style="width: auto;">
 							Suppose $H$ is a $k$-uniform, $k$-regular hypergraph.
 							 What conditions on H will ensure that $H$ is 2-colorable?	
 						</blockquote>
@@ -417,8 +414,8 @@
 						</div>
 					</section>
 
-					<section data-background="sp2020/bg-1.png" data-background-opacity=0.1 style="text-align: left; font-size: 28px;" data-auto-animate>
-						<h2 style="font-size: 35px; margin-bottom: 1cm;">
+					<section data-background="sp2020/bg-1.png" data-background-opacity=0.1 style="text-align: left; font-size: 28px;" data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
+						<h2 data-id="aaaa" style="font-size: 35px; margin-bottom: 1cm;">
 							2-colorability of Hypergraphs
 						</h2>
 
@@ -443,12 +440,12 @@
 						</div>
 					</section>
 
-					<section data-background="sp2020/bg-1.png" data-background-opacity=0.1 style="text-align: left; font-size: 24px;" data-auto-animate>
+					<section data-background="sp2020/bg-1.png" data-background-opacity=0.1 style="text-align: left; font-size: 24px;">
 						<h2 style="font-size: 35px; margin-bottom: 1cm; margin-top: 0.8cm;">
 							Vertex Colouring
 						</h2>
 
-						<blockquote class="fragment" style="width: auto;">
+						<blockquote style="width: auto;">
 							Let $G$ be a graph with degree at most $\Delta$. 
 							Let $X_v$ be the random variable that represents the 
 							color of the vertex $v$. Let $X_v$ be a independent and uniformly
