Update and rename b3-stat-compre-paper.html to B3-StatCompre-Paper-TSNE.html

--- a/B3-StatCompre-Paper-TSNE.html
+++ b/B3-StatCompre-Paper-TSNE.html
@@ -4,8 +4,8 @@
 
         <title>Visualizing Data using t-SNE</title>
 
-        <meta name="description" content="SP2020">
-        <meta name="author" content="Riddhiman Saha">
+        <meta name="description" content="Paper Presentation for Statistics Comprehensive">
+        <meta name="author" content="Jyotishka Ray Choudhury">
 
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
