--- a/B3-StatCompre-Paper-TSNE.html
+++ b/B3-StatCompre-Paper-TSNE.html
@@ -643,7 +643,7 @@
                 // Enable keyboard shortcuts for navigation
                 keyboard: true,
 
-				slideNumber: true,
+				slideNumber: false,
 
 				// Can be used to limit the contexts in which the slide number appears
 				// - "all":      Always show the slide number
